<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.w.calculator9.MainActivity">

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:text="@string/seven" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn7"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/btn7"
        android:text="@string/eight" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn6"
        android:layout_below="@+id/display"
        android:text="@string/nine" />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn9"
        android:layout_alignBottom="@+id/btn9"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/divide" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn7"
        android:layout_below="@+id/btn7"
        android:layout_marginTop="22dp"
        android:text="@string/four" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn8"
        android:layout_alignTop="@+id/btn4"
        android:text="@string/five" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn5"
        android:layout_alignBottom="@+id/btn5"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/btndivide"
        android:text="@string/six" />

    <Button
        android:id="@+id/btnmultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn6"
        android:layout_toEndOf="@+id/btn6"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn4"
        android:layout_below="@+id/btn4"
        android:layout_marginTop="33dp"
        android:text="@string/one" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn1"
        android:layout_alignBottom="@+id/btn1"
        android:layout_alignStart="@+id/btn0"
        android:text="@string/two" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn2"
        android:layout_alignBottom="@+id/btn2"
        android:layout_alignStart="@+id/btn6"
        android:text="@string/three" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btndecimal"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/add" />

    <Button
        android:id="@+id/btndecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="19dp"
        android:text="@string/decimal" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn5"
        android:layout_alignTop="@+id/btndecimal"
        android:text="@string/zero" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignStart="@+id/btn3"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btnsubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnclear"
        android:layout_alignBottom="@+id/btnclear"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/subtract" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/btn8"
        android:layout_alignStart="@+id/btn7"
        android:layout_marginBottom="16dp"
        android:text="@string/display" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btndecimal"
        android:layout_marginTop="48dp"
        android:text="@string/equal" />
</RelativeLayout>
